syntax = "proto3";

package controller.api.resources.hosts.v1;

option go_package = "github.com/hashicorp/watchtower/internal/gen/controller/api/resources/hosts;hosts";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

// StaticHostCatalog manages StaticHosts and StaticHostSets
message StaticHostCatalog {
	// Canonical path of the resource from the API's base URI
	// Output only.
	string path = 1;

	// The type of the resource, to help differentiate schemas
	string type = 2;

	// Friendly name, if set
	google.protobuf.StringValue friendly_name = 3;

	// The time this host was created
	// Output only.
	google.protobuf.Timestamp created_time = 4;

	// The time this host was last updated
	// Output only.
	google.protobuf.Timestamp updated_time = 5;

	// Whether the catalog is disabled
	google.protobuf.BoolValue disabled = 6;
}
